tests/invalid/classes/02_assign_type_mismatch.cps
class A { let n: integer; }
let a: A = new A();
a.n = "hola";     // string a integer E004
